--- a/css/main.css
+++ b/css/main.css
@@ -34,8 +34,8 @@ h2
 	height:26px;
 	margin-top:4px;
 	margin-bottom:0;
-	margin-right:-14px;
-	margin-left:-r14px;
+	margin-right:0px;
+	margin-left:-14px;
 	padding-left:8px;
 	padding-top:2px;
 	padding-bottom:4px;
