--- a/css/main.css
+++ b/css/main.css
@@ -1,321 +1,299 @@
-body
-{
-	font-family:Arial, Helvetica, sans-serif;
-	font-size:11pt;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 11pt;
 }
-.xlatestnews
-{
-	text-align:center;
-	font-weight:bolder;
-	font-size:14pt;
+.h1 {
+  padding-top: -20px;
+  margin-top: -20px;
+  text-align: center;
+  vertical-align: top;
+  padding: 0;
+  margin: 0;
+  color: #006633;
 }
-.clickphoto
-{
-	padding-top:14px;
-	text-align:center;
-	font-weight:bold;
-	font-size:12pt;
+.h1 a {
+  text-align: center;
+  font-size: 32pt;
+  font-weight: bolder;
+  font-weight: 600;
+  text-decoration: none;
+  color: #006633;
 }
-.txtCenter
-{
-	
-	text-align:center;
+h1,
+h1 a {
+  padding-top: -20px;
+  margin-top: -20px;
+  color: #006633;
 }
-
-.img_center
- {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+h2 {
+  border: 1px solid;
+  border-color: #333333;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  background-color: #33cc33;
+  color: #ffffff;
+  font-size: 14pt;
+  font-weight: 700;
+  height: 28px;
+  margin-top: 4px;
+  margin-bottom: 0;
+  margin-right: -10px;
+  margin-left: -20px;
+  padding-left: 8px;
+  padding-top: 2px;
+  padding-bottom: 6px;
+  text-align: center;
+  font-weight: 500;
 }
-h2
-{
-	background-color:#3C3;
-	border-radius:4px;
-	border:1px solid;
-	border-color:#666;
-	color:#FFF;
-	font-size:14pt;
-	font-weight:600;
-	height:26px;
-	margin-top:4px;
-	margin-bottom:0;
-	margin-right:-10px;
-	margin-left:-20px;
-	padding-left:8px;
-	padding-top:2px;
-	padding-bottom:4px;
-	text-align:center;
-	font-weight:500;
+h3 {
+  margin-top: 6px;
 }
-h3
-{
-	margin-top:6px;
+li {
+  padding-bottom: 6px;
+  padding-top: 4px;
 }
-li
-{
-	padding-bottom:6px;
-	padding-top:4px;
+td,
+th {
+  vertical-align: top;
 }
-td,th
-{
-	vertical-align:top;
+.xlatestnews {
+  text-align: center;
+  font-weight: bolder;
+  font-size: 14pt;
 }
-.top
-{
-	text-align:center;
-	position:absolute;
-	left:50%;
-	padding-top:10px;
-	padding-bottom:10px;
+.clickphoto {
+  padding-top: 14px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 12pt;
 }
-.rhspic
-{
-	width:230px;
+.txtCenter {
+  text-align: center;
 }
-.tnpic
-{
-	height:140px;
+.img_center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
-
-.block, .img_pad
-{
-	background-color:#FFC;
-	border-radius:4px;
-	border:1px solid;
-	font-size:11pt;
-	margin-top:6px;
-	margin-bottom:6px;
-	margin-left:0;
-	margin-right:0;
-	padding-left:4px;
-	padding-right:2px;
-	padding-top:4px;
-	padding-bottom:4px;
+.top {
+  left: 30%;   
+  position: absolute;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
-.picright
-{
-	padding-left:4px;
-	padding-right:4px;
-	padding-left:6px;
-	padding-right:6px;
-	float:right;
+.rhspic {
+  width: 230px;
 }
-.ctteepic
-{
-	width:300px;
-	padding-left:4px;
-	padding-right:4px;
-	padding-left:6px;
-	padding-right:6px;
-	float:right;
+.tnpic {
+  height: 140px;
 }
-.h1
-{
-	vertical-align:top;
-	text-align:center;
-	padding:0;
-	margin:0
+.block,
+.img_pad {
+  border: 1px solid;
+  border-color: #333333;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  background-color: #ffffcc;
+  font-size: 11pt;
+  margin-top: 6px;
+  margin-bottom: 6px;
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
-.h1 a
-{
-	font-size:28pt;
-	font-weight:600;
-	text-decoration:none;
-    color:#063;
+.picright {
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-left: 6px;
+  padding-right: 6px;
+  float: right;
 }
-.reg
-{
-	color:#333;
-	font-size:11pt;
-	padding-top:6px;
-	padding-bottom:10px;
-	text-align:center;
+.ctteepic {
+  width: 300px;
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-left: 6px;
+  padding-right: 6px;
+  float: right;
 }
- /*!
- * Start Bootstrap - Simple Sidebar HTML Template (http://startbootstrap.com)
- * Code licensed under Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-/* Toggle Styles */
+.reg {
+  color: #333;
+  font-size: 11pt;
+  padding-top: 6px;
+  padding-bottom: 10px;
+  text-align: center;
+}
 #wrapper {
-    padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+  padding-left: 0;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
-
 #wrapper.toggled {
-    padding-left: 150px  ;
+  padding-left: 150px  ;
 }
-
 #sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    left: 150px  ;
-    width: 0;
-    height: 100%;
-    margin-left: -150px  ;
-    overflow-y: auto;
-    background: #fff;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+  z-index: 1000;
+  position: fixed;
+  left: 150px;
+  width: 0;
+  height: 100%;
+  margin-left: -150px;
+  overflow-y: auto;
+  background: #fff;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
-
 #wrapper.toggled #sidebar-wrapper {
-    width: 150px  ;
+  width: 150px;
 }
-
 #page-content-wrapper {
-    width: 100%;
-    position: absolute;
-    padding: 15px;
+  width: 100%;
+  position: absolute;
+  padding: 15px;
 }
-
 #wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -150px  ;
+  position: absolute;
+  margin-right: -150px;
 }
-
 /* Sidebar Styles */
 .sidebar-nav {
-    position: absolute;
-    top: 0;
-    width: 150px  ;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  position: absolute;
+  top: 0;
+  width: 150px;
+  margin-top: 4px;
+  padding-top: 4px;
+  list-style: none;
 }
 .sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
+  text-indent: 20px;
+  line-height: 40px;
 }
 .sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color:  #333;
+  display: block;
+  text-decoration: none;
+  color: #333;
 }
 .sidebar-nav li a:hover {
-    text-decoration: none;
-    color: #333;
-    background: rgba(255,255,255,0.2);
+  text-decoration: none;
+  color: #333;
+  background: rgba(255, 255, 255, 0.2);
 }
-
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
-    text-decoration: none;
+  text-decoration: none;
 }
 .sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
+  height: 65px;
+  font-size: 18px;
+  line-height: 60px;
 }
 .sidebar-nav > .sidebar-brand a {
-    color: #999999;
+  color: #999999;
 }
 .sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
+  color: #fff;
+  background: none;
 }
-@media(min-width:768px) {
-    #wrapper {
-        padding-left: 150px  ;
-    }
-
-    #wrapper.toggled {
-        padding-left: 0;
-    }
-
-    #sidebar-wrapper {
-        width: 150px  ;
-    }
-
-    #wrapper.toggled #sidebar-wrapper {
-        width: 0;
-    }
-
-    #page-content-wrapper {
-        padding: 20px;
-        position: relative;
-    }
-
-    #wrapper.toggled #page-content-wrapper
-	{
-		padding:0;
-        position: relative;
-        margin : 0;
-    }
+@media (min-width: 768px) {
+  #wrapper {
+    padding-left: 150px;
+  }
+  #wrapper.toggled {
+    padding-left: 0;
+  }
+  #sidebar-wrapper {
+    width: 150px;
+  }
+  #wrapper.toggled #sidebar-wrapper {
+    width: 0;
+  }
+  #page-content-wrapper {
+    padding: 20px;
+    position: relative;
+  }
+  #wrapper.toggled #page-content-wrapper {
+    padding: 0;
+    position: relative;
+    margin: 0;
+  }
 }
-#container-fluid
-{
-	padding:0;
-	margin:0;
+#container-fluid {
+  padding: 0;
+  margin: 0;
 }
-.newbutton
-{
-	background-color:#06F;
-	border-radius:4px;
-	border:1px solid;
-	width:120px;
-	border-color:#333;
-	line-height:22px;
-	margin-right:0;
-    margin-left:6px;
-    margin-top:7px;
-	margin-bottom:7px;
-	padding-right:2px;
-	padding-left:2px;
-	padding-top:2px;
-	padding-bottom:0;
-	text-decoration:none;
+.newbutton {
+  background-color: #0066ff;
+  border: 1px solid;
+  border-color: #333333;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  width: 120px;
+  line-height: 22px;
+  margin-right: 0;
+  margin-left: 6px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding-right: 2px;
+  padding-left: 4px;
+  padding-top: 2px;
+  padding-bottom: 0;
+  text-decoration: none;
 }
-.newbutton a
-{
-	color:#FFF;
-	font-size:11pt;
-	font-weight:500;
-	text-decoration:none;
+.newbutton a {
+  color: #ffffff;
+  font-size: 11pt;
+  font-weight: 500;
+  text-decoration: none;
 }
-.newbutton a:hover
-{
-	text-decoration:underline;
+.newbutton a:hover {
+  text-decoration: underline;
 }
-.redbutton
-{
-	background-color:#093;
-	border-radius:4px;
-	border:1px solid;
-	border-color:#333;
-	line-height:22px;
-	margin-right:0;
-    margin-left:6px;
-    margin-top:7px;
-	margin-bottom:7px;
-	padding-left:2px;
-	padding-right:2px;
-	padding-top:2px;
-	padding-right:6px;
-	padding-bottom:0;
-	text-decoration:none;
-	width:120px;
+.redbutton {
+  background-color: #009933;
+  border: 1px solid;
+  border-color: #333333;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  line-height: 22px;
+  margin-right: 0;
+  margin-left: 6px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding-left: 2px;
+  padding-right: 4px;
+  padding-top: 2px;
+  padding-right: 6px;
+  padding-bottom: 0;
+  text-decoration: none;
+  width: 120px;
 }
-.redbutton a
-{
-	color:#FFF;
-	font-size:11pt;
-	font-weight:500;
-	text-decoration:none;
+.redbutton a {
+  color: #ffffff;
+  font-size: 11pt;
+  font-weight: 500;
+  text-decoration: none;
 }
-.redbutton a:hover
-{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.redbutton a:hover {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
-.brclear
-{
-	clear:both;
+.brclear {
+  clear: both;
 }
+hr {
+  height: 1px; 
+  background-color: #333;
+  color: #black;
+} 
