--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-body {
+body
+{
   font-family: Arial, Helvetica, sans-serif;
   font-size: 11pt;
 }
@@ -25,7 +26,8 @@ h1 a {
   margin-top: -20px;
   color: #006633;
 }
-h2 {
+h2
+{
   border: 1px solid;
   border-color: #333333;
   border-radius: 4px;
@@ -77,7 +79,7 @@ th {
   margin-right: auto;
 }
 .top {
-  left: 30%;   
+  left: 30%;
   position: absolute;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -179,8 +181,8 @@ th {
 }
 .sidebar-nav li a {
   display: block;
-  text-decoration: none;
-  color: #333;
+  text-decoration : none;
+  color           : #333;
 }
 .sidebar-nav li a:hover {
   text-decoration: none;
@@ -293,7 +295,7 @@ th {
   clear: both;
 }
 hr {
-  height: 1px; 
+  height: 1px;
   background-color: #333;
   color: #black;
-} 
+}
